Add society redevelopment requirement flow
